--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,15 @@ main {
 }
 
 /* image */
+.image-container {
+    width: 100%;
+    display: none;
+}
+
+.image-container.active {
+    display: block;
+}
+
 .col img {
     width: 100%;
     height: 100%;
